// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`identicon-file should create an identicon file 1`] = `
{
  "data": [
    137,
    80,
    78,
    71,
    13,
    10,
    26,
    10,
    0,
    0,
    0,
    13,
    73,
    72,
    68,
    82,
    0,
    0,
    0,
    128,
    0,
    0,
    0,
    128,
    8,
    6,
    0,
    0,
    0,
    195,
    62,
    97,
    203,
    0,
    0,
    0,
    6,
    98,
    75,
    71,
    68,
    0,
    255,
    0,
    255,
    0,
    255,
    160,
    189,
    167,
    147,
    0,
    0,
    1,
    141,
    73,
    68,
    65,
    84,
    120,
    156,
    237,
    221,
    193,
    13,
    194,
    48,
    16,
    0,
    65,
    64,
    84,
    23,
    254,
    212,
    65,
    39,
    208,
    70,
    248,
    83,
    31,
    52,
    129,
    99,
    201,
    59,
    83,
    128,
    227,
    72,
    43,
    251,
    101,
    221,
    121,
    223,
    158,
    223,
    211,
    66,
    238,
    159,
    199,
    208,
    245,
    223,
    183,
    215,
    208,
    245,
    143,
    118,
    153,
    189,
    1,
    230,
    18,
    64,
    156,
    0,
    226,
    4,
    16,
    39,
    128,
    56,
    1,
    196,
    9,
    32,
    78,
    0,
    113,
    2,
    136,
    19,
    64,
    156,
    0,
    226,
    4,
    16,
    39,
    128,
    56,
    1,
    196,
    9,
    32,
    78,
    0,
    113,
    2,
    136,
    19,
    64,
    156,
    0,
    226,
    4,
    16,
    39,
    128,
    56,
    1,
    196,
    9,
    32,
    78,
    0,
    113,
    2,
    136,
    19,
    64,
    156,
    0,
    226,
    4,
    16,
    39,
    128,
    56,
    1,
    196,
    9,
    32,
    78,
    0,
    113,
    2,
    136,
    19,
    64,
    156,
    0,
    226,
    4,
    16,
    39,
    128,
    56,
    1,
    196,
    9,
    32,
    78,
    0,
    113,
    2,
    136,
    19,
    64,
    156,
    0,
    226,
    4,
    16,
    39,
    128,
    56,
    1,
    196,
    9,
    32,
    78,
    0,
    113,
    2,
    136,
    19,
    64,
    220,
    117,
    246,
    6,
    254,
    109,
    181,
    145,
    46,
    163,
    57,
    1,
    226,
    4,
    16,
    39,
    128,
    56,
    1,
    196,
    9,
    32,
    78,
    0,
    113,
    2,
    136,
    19,
    64,
    156,
    0,
    226,
    4,
    16,
    39,
    128,
    56,
    1,
    196,
    9,
    32,
    78,
    0,
    113,
    2,
    136,
    19,
    64,
    156,
    0,
    226,
    4,
    16,
    39,
    128,
    56,
    1,
    196,
    9,
    32,
    78,
    0,
    113,
    2,
    136,
    19,
    64,
    156,
    0,
    226,
    14,
    123,
    25,
    116,
    255,
    60,
    134,
    127,
    227,
    168,
    87,
    65,
    43,
    253,
    139,
    19,
    32,
    78,
    0,
    113,
    2,
    136,
    19,
    64,
    156,
    0,
    226,
    4,
    16,
    39,
    128,
    56,
    1,
    196,
    9,
    32,
    78,
    0,
    113,
    2,
    136,
    19,
    64,
    156,
    0,
    226,
    4,
    16,
    39,
    128,
    56,
    1,
    196,
    9,
    32,
    78,
    0,
    113,
    2,
    136,
    19,
    64,
    156,
    0,
    226,
    4,
    16,
    39,
    128,
    56,
    1,
    196,
    157,
    247,
    237,
    249,
    157,
    189,
    9,
    230,
    89,
    110,
    102,
    208,
    232,
    87,
    59,
    171,
    205,
    36,
    114,
    5,
    196,
    9,
    32,
    78,
    0,
    113,
    2,
    136,
    19,
    64,
    156,
    0,
    226,
    4,
    16,
    39,
    128,
    56,
    1,
    196,
    9,
    32,
    78,
    0,
    113,
    2,
    136,
    19,
    64,
    156,
    0,
    226,
    4,
    16,
    39,
    128,
    56,
    1,
    196,
    9,
    32,
    78,
    0,
    113,
    2,
    136,
    19,
    64,
    156,
    0,
    226,
    4,
    16,
    39,
    128,
    184,
    31,
    202,
    125,
    19,
    140,
    171,
    24,
    160,
    4,
    0,
    0,
    0,
    0,
    73,
    69,
    78,
    68,
    174,
    66,
    96,
    130,
  ],
  "type": "Buffer",
}
`;

exports[`identicon-file should create an identicon file with a custom size 1`] = `
{
  "data": [
    137,
    80,
    78,
    71,
    13,
    10,
    26,
    10,
    0,
    0,
    0,
    13,
    73,
    72,
    68,
    82,
    0,
    0,
    1,
    0,
    0,
    0,
    1,
    0,
    8,
    6,
    0,
    0,
    0,
    92,
    114,
    168,
    102,
    0,
    0,
    0,
    6,
    98,
    75,
    71,
    68,
    0,
    255,
    0,
    255,
    0,
    255,
    160,
    189,
    167,
    147,
    0,
    0,
    3,
    106,
    73,
    68,
    65,
    84,
    120,
    156,
    237,
    215,
    209,
    137,
    2,
    65,
    16,
    69,
    209,
    157,
    197,
    0,
    198,
    184,
    52,
    8,
    51,
    115,
    130,
    48,
    47,
    67,
    232,
    141,
    192,
    191,
    129,
    146,
    189,
    231,
    68,
    240,
    160,
    225,
    210,
    181,
    173,
    181,
    214,
    207,
    63,
    113,
    61,
    238,
    211,
    19,
    8,
    120,
    63,
    94,
    211,
    19,
    78,
    243,
    59,
    61,
    0,
    152,
    35,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    182,
    237,
    207,
    219,
    154,
    30,
    1,
    204,
    184,
    76,
    15,
    56,
    219,
    251,
    241,
    154,
    158,
    112,
    138,
    235,
    113,
    159,
    158,
    112,
    42,
    239,
    242,
    157,
    156,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    182,
    237,
    207,
    219,
    154,
    30,
    1,
    204,
    184,
    76,
    15,
    224,
    179,
    247,
    227,
    53,
    61,
    225,
    20,
    215,
    227,
    62,
    61,
    129,
    15,
    156,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    38,
    0,
    16,
    182,
    237,
    207,
    219,
    154,
    30,
    1,
    204,
    240,
    3,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    48,
    1,
    128,
    176,
    63,
    253,
    201,
    23,
    232,
    44,
    184,
    41,
    52,
    0,
    0,
    0,
    0,
    73,
    69,
    78,
    68,
    174,
    66,
    96,
    130,
  ],
  "type": "Buffer",
}
`;
